# tf-inpainting

./: .gitignore  pyproject.toml  utils.py
notebooks/: build_dataset.py  eda.py  train.py
tf_inpainting/encoders/: boundless.py
tf_inpainting/generators/: boundless.py
tf_inpainting/layers/: gated_layer.py
