[tool.black]
line-length = 120
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \venv
)/
'''

[tool.poetry]
name = "tf-inpainting"
version = "0.1.0"
description = "Tensorflow 2 implementations of some GAN for image inpainting"
authors = ["Clément Walter <clement0walter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"
black = "^19.10b0"
tensorflow = "^2.2.0"
numpy = "^1.18.4"
tensorflow-gan = "^2.0.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.2.1"
awscli = "^1.18.68"
boto3 = "^1.13.18"
seaborn = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
